unburden-home-dir (0.4.1.2) UNRELEASED; urgency=medium

  * Bump debhelper compatibility level to 13.
    + Build-depend on "debhelper-compat (= 13)" to replace debian/compat.
    + Drop --fail-missing from dh_install, it's now dh_missing's default.

 -- Axel Beckert <abe@debian.org>  Sat, 02 Jan 2021 05:39:44 +0100

unburden-home-dir (0.4.1.1) unstable; urgency=medium

  [ Jakub Wilk ]
  * Fix a bunch of typos.

  [ Axel Beckert ]
  * Declare compliance with Debian Policy 4.1.5. (No other changes.)
  * Update build-dependency from "ruby-ronn" to "ronn | ruby-ronn (<<
    0.7.3-5.1~)" due to short-term package split-up. (Closes: #903073)
  * Build-Conflict with libperl-critic-freenode-perl for now.
  * Replace /usr/share/doc/unburden-home-dir/html/search/mustache.min.js
    with symlink in unburden-home-dir-doc and recommend libjs-mustache.
  * Switch to debhelper compatibility level 11.
    + Update versioned debhelper build-dependency accordingly.

 -- Axel Beckert <abe@debian.org>  Thu, 05 Jul 2018 23:16:43 +0200

unburden-home-dir (0.4.1) unstable; urgency=low

  Default/Example Configuration:

  * Switch Chrome/Chromium "Thumbnails" type from file to directory.
  * Don't merge Chromium Thumbnails into Chrome Thumbnails.

  Documentation:

  * Fulfils some more Core Infrastructure Documentation Best Practices.
    + Document how to report security bugs by (PGP-encrypted) e-mail.
    + Document PGP key(s) used in the project and how to retrieve it.
  * Add repology package list badges to README.md + docs/installation.md.

  Test Suite (adds new test/build dependency Perl::Critic):

  * Test suite: Run checkbashism also on share/common.sh and
    Xsession.d/25unburden-home-dir-xdg.
  * Test suite: Provide checkbashism as its own Make target.
  * Use Perl::Critic as part of the test suite.
    + Add libtest-perl-critic-perl as build-dependency.
    + Add .perlcriticrc* files to configure Perl::Critic.
